--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       <input type="range" id="price-range" min="0" max="1000" step="10">
       <span id="price-value">Max: $1000</span>
     </section>
+    <select id="category-select">
+        <option value="all">All Categories</option>
+        <option value="Electronics">Electronics</option>
+        <option value="Fashion">Fashion</option>
+        <option value="Home">Home</option>
+      </select>
+      
 
     <section id="product-grid"></section>
   </main>
